Run an extra mile added

--- a/a2.html
+++ b/a2.html
@@ -59,10 +59,71 @@
                 </div>
 
             </div>
+            <div class="card2">
+                <div class="card2items">
+                    <p class="ctxt1">500+</p>
+                    <p class="ctxt2">Free workout videos</p>
+                </div>
+
+            </div>
         </div>
 
-        </div>
+
     </header>
+
+    <main class="bg-main">
+        <section class="rules">
+            <section class="habitdesc">
+                <div class="habits">
+
+                    <p class="habitstxt">Change your habits</p>
+                    <p class="habitstxt2">We believe fitness should be accessible to everyone, everywhere, regardless of
+                        income or access
+                        to a gym.</p>
+
+                </div>
+                <div>
+
+                </div>
+
+            </section>
+
+            <section class="fitnessimage">
+                <div class="gridcontainer1">
+                    <img src="images/image 3.png" alt="">
+                    <p class="Movementtxt">Movement</p>
+                    <p class="Movementtxt2">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div>
+                    <img src="images/image 2.png" alt="">
+                    <p class="Movementtxt">Time</p>
+                    <p class="Movementtxt2">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div><img src="images/image 4.png" alt="">
+                    <p class="Movementtxt">Practice</p>
+                    <p class="Movementtxt2">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div><img src="images/image 5.png" alt="">
+                    <p class="Movementtxt">Weight Loss</p>
+                    <p class="Movementtxt2">We believe fitness should be accessible to everyone</p>
+                </div>
+            </section>
+            <section class="flexcontainer">
+                <div>
+                    <p> Run an extra Mile Easily</p>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym. With hundreds of professional workouts.</p>
+                    <button>Join Now</button>
+
+                </div>
+                <div class="imagecontainer">
+                    <img src="images/run.jpg" alt="">
+
+                </div>
+            </section>
+
+        </section>
+    </main>
 </body>
 
 </html>
