Training parts modified

--- a/a2.html
+++ b/a2.html
@@ -109,9 +109,10 @@
                 </div>
             </section>
             <section class="flexcontainer">
-                <div>
-                    <p> Run an extra Mile Easily</p>
-                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                <div class="flexitems">
+                    <p class="flextxt1"> Run an Extra <br>Mile Easily</p>
+                    <p class="flextxt2">We believe fitness should be accessible to everyone, everywhere, regardless of
+                        income or access
                         to a gym. With hundreds of professional workouts.</p>
                     <button>Join Now</button>
 
@@ -120,6 +121,36 @@
                     <img src="images/run.jpg" alt="">
 
                 </div>
+            </section>
+            <section class="gridspan">
+                <div class="gridcontents">
+                    <p class="flextxt1">Trainings and Exercises</p>
+                    <p class="gspan1">We believe fitness should be accessible to everyone, everywhere, regardless of
+                        income or access
+                        to a gym.</p>
+                </div>
+                <div class="gridimages">
+                    <div class="gspancontainer first">
+                        <img id="ex1" src="images/exercise1.jpg" alt="">
+                        <p>Legs</p>
+                    </div>
+                    <div class="gspancontainer second"><img id="ex2" src="images/exercise2.png" alt="">
+                        <p>Legs</p>
+                    </div>
+                    <div class="gspancontainer"><img src="images/exercise3.png" alt="">
+                        <p>Legs</p>
+                    </div>
+                    <div class="gspancontainer"><img src="images/exercise4.png" alt="">
+                        <p>Legs</p>
+                    </div>
+                    <div class="gspancontainer"><img src="images/exercise5.jpg" alt="">
+                        <p>Legs</p>
+                    </div>
+                    <div class="gspancontainer"><img src="images/exercise6.jpg" alt="">
+                        <p>Legs</p>
+                    </div>
+                </div>
+
             </section>
 
         </section>
