--- a/a2.html
+++ b/a2.html
@@ -135,26 +135,145 @@
                         <p>Legs</p>
                     </div>
                     <div class="gspancontainer second"><img id="ex2" src="images/exercise2.png" alt="">
-                        <p>Legs</p>
+                        <p>Doing Push ups</p>
                     </div>
                     <div class="gspancontainer"><img src="images/exercise3.png" alt="">
-                        <p>Legs</p>
+                        <p>Leg Press: Works the quadriceps and glutes</p>
                     </div>
                     <div class="gspancontainer"><img src="images/exercise4.png" alt="">
-                        <p>Legs</p>
+                        <p>Working on biceps</p>
                     </div>
                     <div class="gspancontainer"><img src="images/exercise5.jpg" alt="">
-                        <p>Legs</p>
+                        <p>Squats</p>
                     </div>
                     <div class="gspancontainer"><img src="images/exercise6.jpg" alt="">
-                        <p>Legs</p>
+                        <p>LegPress</p>
                     </div>
+                </div>
+
+                <div class="bmicontainer">
+                    <p class="flextxt1">BMI Calculator</p>
+                    <p class="gspan1">
+                        We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym.
+                    </p>
                 </div>
 
             </section>
 
         </section>
+        <section class="bg-bmi">
+            <section class="rules displayflex Bmisection">
+                <div>
+                    <p class="bmitxt">BMI Calculator</p>
+                    <table class="bmitable">
+                        <thead>
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5-24.9</td>
+                                <td>healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0-29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0-and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+                <div>
+                    <p class="bmitxt">Calculate your BMI</p>
+                    <p class="gspan1">We believe fitness should be accessible to everyone, everywhere, regardless of
+                        income or access
+                        to a gym. </p>
+
+                    <form action="" class="formcontainer">
+                        <div class="form-group">
+                            <input type="number" placeholder="Height/cm">
+                        </div>
+                        <div class="form-group">
+                            <input type="number" placeholder="Weight/kg">
+                        </div>
+                        <div class="form-group">
+                            <input type="number" placeholder="Age">
+
+                        </div>
+                        <div class="form-group">
+                            <select>
+                                <option value="" disabled selected>Sex</option>
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <select>
+                                <option value="" disabled selected>Select an activity factor</option>
+
+                                <option value="light">Light Exercise</option>
+                                <option value="moderate">Moderate Exercise</option>
+
+                            </select>
+                        </div>
+
+                    </form>
+
+                    <button class="btn-calculator" type="submit">Calculate</button>
+                </div>
+
+            </section>
+        </section>
+
+        <section class="rules">
+            <div class="team">
+                <p class="flextxt1">Meet Our Team</p>
+                <p class="gspan1">Aaryn, AAraf, Nihal, Tamzid, Ruzhan and Shifu</p>
+            </div>
+            <div class="bg-trainers">
+                <div class="trainers">
+                    <div class="trainercontainer">
+                        <img src="images/trainer1.png" alt="">
+                        <p></p>
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer2.png" alt="">
+                        <p></p>
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer3.png" alt="">
+                        <p></p>
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer4.png" alt="">
+                        <p></p>
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer5.png" alt="">
+                        <p></p>
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer6.png" alt="">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
+
 </body>
 
 </html>
