Updated all the parts

--- a/a2.html
+++ b/a2.html
@@ -121,6 +121,8 @@
                     <img src="images/run.jpg" alt="">
 
                 </div>
+
+
             </section>
             <section class="gridspan">
                 <div class="gridcontents">
@@ -162,7 +164,7 @@
             </section>
 
         </section>
-        <section class="bg-bmi">
+        <section class="bg-bmi bmipadding">
             <section class="rules displayflex Bmisection">
                 <div>
                     <p class="bmitxt">BMI Calculator</p>
@@ -201,32 +203,30 @@
                         to a gym. </p>
 
                     <form action="" class="formcontainer">
-                        <div class="form-group">
-                            <input type="number" placeholder="Height/cm">
-                        </div>
-                        <div class="form-group">
-                            <input type="number" placeholder="Weight/kg">
-                        </div>
-                        <div class="form-group">
-                            <input type="number" placeholder="Age">
 
-                        </div>
-                        <div class="form-group">
-                            <select>
-                                <option value="" disabled selected>Sex</option>
-                                <option value="male">Male</option>
-                                <option value="female">Female</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <select>
-                                <option value="" disabled selected>Select an activity factor</option>
+                        <input class="height" type="number" placeholder="Height/cm" />
 
-                                <option value="light">Light Exercise</option>
-                                <option value="moderate">Moderate Exercise</option>
 
-                            </select>
-                        </div>
+                        <input class="weight" type="number" placeholder="Weight/kg" />
+
+
+                        <input class="Age" type="number" placeholder="Age" />
+
+
+                        <select class="gender">
+                            <option value="" disabled selected>Sex</option>
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
+
+                        <select class="activity">
+                            <option value="" disabled selected>Select an activity factor</option>
+
+                            <option value="light">Light Exercise</option>
+                            <option value="moderate">Moderate Exercise</option>
+
+                        </select>
+
 
                     </form>
 
@@ -236,43 +236,128 @@
             </section>
         </section>
 
-        <section class="rules">
+        <section class="rules meetteam">
             <div class="team">
                 <p class="flextxt1">Meet Our Team</p>
                 <p class="gspan1">Aaryn, AAraf, Nihal, Tamzid, Ruzhan and Shifu</p>
             </div>
-            <div class="bg-trainers">
-                <div class="trainers">
-                    <div class="trainercontainer">
-                        <img src="images/trainer1.png" alt="">
-                        <p></p>
-                    </div>
-                    <div class="trainercontainer">
-                        <img src="images/trainer2.png" alt="">
-                        <p></p>
-                    </div>
-                    <div class="trainercontainer">
-                        <img src="images/trainer3.png" alt="">
-                        <p></p>
-                    </div>
-                    <div class="trainercontainer">
-                        <img src="images/trainer4.png" alt="">
-                        <p></p>
-                    </div>
-                    <div class="trainercontainer">
-                        <img src="images/trainer5.png" alt="">
-                        <p></p>
-                    </div>
-                    <div class="trainercontainer">
-                        <img src="images/trainer6.png" alt="">
-                        <p></p>
-                    </div>
+            <div class="bg-trainers trainers">
+
+                <div class="trainercontainer">
+                    <img src="images/trainer1.png" alt="">
+
+                    <h3>Jerome Bell</h3>
+                    <p>Trainer</p>
+
                 </div>
+                <div class="trainercontainer">
+                    <img src="images/trainer2.png" alt="">
+
+                    <h3>Cameron Williamson</h3>
+                    <p>Trainer</p>
+
+                </div>
+                <div class="trainercontainer">
+                    <img src="images/trainer3.png" alt="">
+
+                    <h3>Darrell Steward</h3>
+                    <p>Trainer</p>
+
+                </div>
+                <div class="trainercontainer">
+                    <img src="images/trainer4.png" alt="">
+
+                    <h3>Dianne Russel</h3>
+                    <p>Trainer</p>
+
+                </div>
+                <div class="trainercontainer">
+                    <img src="images/trainer5.png" alt="">
+
+                    <h3>Cody Fisher</h3>
+                    <p>Trainer</p>
+
+                </div>
+                <div class="trainercontainer">
+                    <img src="images/trainer6.png" alt="">
+
+                    <h3>Theresa Web</h3>
+                    <p>Trainer</p>
+
+                </div>
+
             </div>
 
         </section>
 
+        <section class="rules meetteam">
+            <div class="review">
+                <p class="flextxt1">Our Trainer Reviews</p>
+                <p class="gspan1">These are reviews achieved by our trainers from their respective clients</p>
+
+            </div>
+            <div class="trainerbanner">
+                <div class="reviewbanner">
+                    <h3 class="flextxt1">Jerome <br>Bell</h3>
+                    <div class="rimgcontainer">
+
+                        <img src="images/trainer1.png" alt="">
+                    </div>
+                    <p class="reviewdesc">"He's a power lifter trainer, amazing working experience with him"-
+                        <span class="colortxt">Former
+                            Power
+                            Lifter State Champion
+                    </p></span>
+                </div>
+                <div class="reviewbanner">
+                    <h3 class="flextxt1">Cameron Williamson</h3>
+                    <div class="rimgcontainer">
+                        <img src="images/trainer2.png" alt="">
+                    </div>
+                    <p class="reviewdesc">"He has been a constant guidance to me to reduce my weight through different
+                        exercises"</p>
+                </div>
+                <div class="reviewbanner">
+                    <h3 class="flextxt1">Darrell Steward</h3>
+                    <div class="rimgcontainer">
+                        <img src="images/trainer3.png" alt="">
+                    </div>
+                    <p class="reviewdesc">"He's one of the best trainers out there when it comes to cardio exercises"
+                    </p>
+                </div>
+            </div>
+        </section>
+
     </main>
+    <footer class="bg-bmi ">
+        <section class="rules footerdesc">
+            <div>
+                <p class="hcolor"><i>Fitness</i></p>
+                <p class="gspan1"> Fitness should be maintained to remain fit and healthy</p>
+            </div>
+            <div>
+                <p class="gstart">Get Started</p>
+                <p class="gtxt">Service</p>
+                <p class="gtxt">Contact us </p>
+                <p class="gtxt">Affiliate</p>
+                <p class="gtxt">about us</p>
+            </div>
+            <div>
+                <p class="gstart">Get Started</p>
+                <p class="gtxt">Fitness</p>
+                <p class="gtxt">Platform </p>
+                <p class="gtxt">Workout Library</p>
+                <p class="gtxt">App Design</p>
+            </div>
+        </section>
+        <section class="rules footerend">
+            <div class="fter">
+                <hr>
+                <p>All rights reserved &copy; Fitness 2024</p>
+            </div>
+        </section>
+
+    </footer>
 
 </body>
 
