--- a/a2.html
+++ b/a2.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="a2.css">
+    <link rel="stylesheet" href="query.css">
+    <script src="https://kit.fontawesome.com/0a5cf0955f.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="inter-font-style">
@@ -17,6 +19,9 @@
 
                 </div>
                 <div class="items">
+                    <div class="icon displayicon">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
                     <ul class="displayflex navbar">
                         <li class="navitem" id="home"><a href="">Home</a></li>
                         <li class="navitem"><a href="">Service</a></li>
@@ -39,10 +44,10 @@
                         transformation
                         stories to help
                         you get fit and stay fit!</p>
-
-                    <button class="bg-button "> Join Club Now!</button>
-                    <button class="bg-button2 bannerbtn">Download app</button>
-
+                    <div class="btncontainer">
+                        <button class="bg-button "> Join Club Now!</button>
+                        <button class="bg-button2 bannerbtn">Download app</button>
+                    </div>
                 </div>
                 <div class="bannercontent2">
                     <img src="images/Images 2.png" alt="">
@@ -51,7 +56,7 @@
 
             <div class="card1">
                 <div>
-                    <div class="circle"></div>
+                    <div class="circle"><i class="fa-solid fa-play"></i></div>
                 </div>
                 <div>
                     <p class="txt-color num">350+</p>
@@ -92,28 +97,26 @@
                 <div class="gridcontainer1">
                     <img src="images/image 3.png" alt="">
                     <p class="Movementtxt">Movement</p>
-                    <p class="Movementtxt2">We believe fitness should be accessible to everyone</p>
+                    <p class="Movementtxt2">Movement is an integral part of maintaining your fitness</p>
                 </div>
-                <div>
+                <div class="gridcontainer1">
                     <img src="images/image 2.png" alt="">
                     <p class="Movementtxt">Time</p>
-                    <p class="Movementtxt2">We believe fitness should be accessible to everyone</p>
+                    <p class="Movementtxt2">We believe time is an essential part of a disciplined life</p>
                 </div>
-                <div><img src="images/image 4.png" alt="">
+                <div class="gridcontainer1"><img src="images/image 4.png" alt="">
                     <p class="Movementtxt">Practice</p>
-                    <p class="Movementtxt2">We believe fitness should be accessible to everyone</p>
+                    <p class="Movementtxt2">Practice makes a man perfect</p>
                 </div>
-                <div><img src="images/image 5.png" alt="">
+                <div class="gridcontainer1"><img src="images/image 5.png" alt="">
                     <p class="Movementtxt">Weight Loss</p>
-                    <p class="Movementtxt2">We believe fitness should be accessible to everyone</p>
+                    <p class="Movementtxt2">Weight loss contributes to mental growth</p>
                 </div>
             </section>
             <section class="flexcontainer">
                 <div class="flexitems">
                     <p class="flextxt1"> Run an Extra <br>Mile Easily</p>
-                    <p class="flextxt2">We believe fitness should be accessible to everyone, everywhere, regardless of
-                        income or access
-                        to a gym. With hundreds of professional workouts.</p>
+                    <p class="flextxt2">Run an extra mile with our trainers to achieve your fitness at peak point</p>
                     <button>Join Now</button>
 
                 </div>
@@ -196,9 +199,10 @@
                     </table>
 
                 </div>
-                <div>
+                <div class="bmicalc">
                     <p class="bmitxt">Calculate your BMI</p>
-                    <p class="gspan1">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    <p class="gspan1 bmitxt2">We believe fitness should be accessible to everyone, everywhere,
+                        regardless of
                         income or access
                         to a gym. </p>
 
@@ -241,51 +245,51 @@
                 <p class="flextxt1">Meet Our Team</p>
                 <p class="gspan1">Aaryn, AAraf, Nihal, Tamzid, Ruzhan and Shifu</p>
             </div>
-            <div class="bg-trainers trainers">
+            <div class="bg-trainers">
+                <div class="trainers">
+                    <div class="trainercontainer">
+                        <img class="trainer1" src="images/trainer1.png" alt="">
 
-                <div class="trainercontainer">
-                    <img src="images/trainer1.png" alt="">
+                        <h3>Jerome Bell</h3>
+                        <p>Trainer</p>
 
-                    <h3>Jerome Bell</h3>
-                    <p>Trainer</p>
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer2.png" alt="">
 
+                        <h3>Cameron Williamson</h3>
+                        <p>Trainer</p>
+
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer3.png" alt="">
+
+                        <h3>Darrell Steward</h3>
+                        <p>Trainer</p>
+
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer4.png" alt="">
+
+                        <h3>Dianne Russel</h3>
+                        <p>Trainer</p>
+
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer5.png" alt="">
+
+                        <h3>Cody Fisher</h3>
+                        <p>Trainer</p>
+
+                    </div>
+                    <div class="trainercontainer">
+                        <img src="images/trainer6.png" alt="">
+
+                        <h3>Theresa Web</h3>
+                        <p>Trainer</p>
+
+                    </div>
                 </div>
-                <div class="trainercontainer">
-                    <img src="images/trainer2.png" alt="">
-
-                    <h3>Cameron Williamson</h3>
-                    <p>Trainer</p>
-
-                </div>
-                <div class="trainercontainer">
-                    <img src="images/trainer3.png" alt="">
-
-                    <h3>Darrell Steward</h3>
-                    <p>Trainer</p>
-
-                </div>
-                <div class="trainercontainer">
-                    <img src="images/trainer4.png" alt="">
-
-                    <h3>Dianne Russel</h3>
-                    <p>Trainer</p>
-
-                </div>
-                <div class="trainercontainer">
-                    <img src="images/trainer5.png" alt="">
-
-                    <h3>Cody Fisher</h3>
-                    <p>Trainer</p>
-
-                </div>
-                <div class="trainercontainer">
-                    <img src="images/trainer6.png" alt="">
-
-                    <h3>Theresa Web</h3>
-                    <p>Trainer</p>
-
-                </div>
-
             </div>
 
         </section>
